fix: post spacing
oh also now fragments are not optional. Caller you better check!!

--- a/packages/frontend/src/app/styles/post-card.scss
+++ b/packages/frontend/src/app/styles/post-card.scss
@@ -69,4 +69,5 @@
     var(--mat-sys-surface-container-low) 10px,
     var(--mat-sys-surface-container-low) 20px
   );
+  border-radius: var(--mat-sys-corner-small);
 }
